feat: enhance course editing functionality and improve error handling